--- a/src/app/components/front-office/home/home.component.css
+++ b/src/app/components/front-office/home/home.component.css
@@ -203,11 +203,10 @@ margin-bottom: 80px;
 }
 
 .icon-container {
-margin-left: -11;
+  margin-left: -11;
   display: flex;
-z-index: 5;
-position: absolute;
-
+  z-index: 5;
+  position: absolute;
 }
 
 .vertical-progress-wrapper {
@@ -342,6 +341,7 @@ h2{
   font-weight: 700;
   color: #022D42;
   display: flex;
+  width: 327px;
 }
 
 .etiquette img{
@@ -373,8 +373,9 @@ h2{
   padding: 24px 0px 0px 0px;
   gap: 16px;
   border-radius: 16px;
-  background-color: #FBFBF7;
+  background: rgba(199, 199, 188, 1);
   display: flex;
+  border: none;
 }
 
 .etiquette-icon{
@@ -472,7 +473,10 @@ h2{
     height: 338px;
     padding-top: 0;
     padding-bottom: 0;
-    
+  }
+
+  .text-intro{
+    font-size:16px;
   }
   .card-container {
     flex-direction: row;
@@ -666,10 +670,6 @@ h2{
     cursor: pointer;
     background-color: #C7C7BC;
   }
-
-
-
-  
 }
 
 
