--- a/src/app/components/front-office/solutions/solutions.component.css
+++ b/src/app/components/front-office/solutions/solutions.component.css
@@ -3,10 +3,11 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  }
+}
+
   .header-intro{
     width: 327px;
-    padding-bottom: 48px;
+    padding-bottom: 28px;
   }
   
   .intro{
@@ -39,8 +40,27 @@
     font-size: 16px;
     font-weight:700 ;
     padding: 7px 16px 12px 16px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between; 
   }
-  
+
+  .button-solutions {
+    height: 54px;
+    white-space: nowrap;
+    display: inline-flex;
+    align-items: center;
+    background-color: #022D42;
+    color: #FBFBF7;
+    gap: 8px;
+    border-radius: 8px;
+    border: none;
+    font-size: 16px;
+    font-weight:700 ;
+    padding: 7px 16px 12px 16px;
+    margin-bottom: 10px;
+  }
+
   .button-acces:hover,
   .button-acces:active {
     color: #022D42;
@@ -65,20 +85,19 @@
   }
 
   .section-titre{
-    font-size: 28px;
-    line-height: 38.8px;
+    font-size: 27px;
+    line-height: 30.8px;
     font-weight: 700;
     color: #022D42;
   }
 
-  .mat-card {
+  .mat-card, .mat-card-dematerialisation{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     text-align: center;
     width: 327px;
-    height: 365px;
     border-radius: 16px;
     padding: 16px 16px 32px 16px;
     gap: 0px;
@@ -109,7 +128,7 @@
   }
   
   mat-card-title{
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 700;
     line-height: 30.8px;
     text-align: center;
@@ -117,7 +136,7 @@
   }
   
   mat-card-content{
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 500;
     line-height: 26px;
     text-align: center;
@@ -130,17 +149,313 @@
     padding: 32px 16px 0px 16px;
     gap: 0px;
     justify-content: space-between;
-    opacity: 0px;
   }
   
   .fleche-devis, .mat-card .fleche-devis, .icone-plus{
     width:28px;
     border-radius: 4px 0px 0px 0px;
-    margin-bottom: -9px;
+  }
+  .petit-carre-jaune{
+    width: 10px;
+    height: 10px;
   }
 
-  .card-container{
+.card-container, .card-dematerialisation{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+}
+
+.card-dematerialisation{
+  margin: 44px;
+}
+
+.section-container{
+  position: relative;
+  max-width: 400px;
+}
+
+.text-container {
+  position: relative;
+}
+
+.section-texte {
+  font-size: 16px;
+  line-height: 24px;
+  max-height: 68px;
+  overflow: hidden;
+  transition: max-height 0.3s ease;
+  margin-bottom: 2px;
+  text-align: justify;
+}
+
+.section-texte.expanded {
+  max-height: 500px;
+}
+
+.toggle-link {
+  color: #022D42;
+  cursor: pointer;
+  display: inline-block;
+  margin-top: 8px;
+  font-weight: 700;
+  text-decoration: underline;
+}
+
+.a-savoir-titre{
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 26.4px;
+  color: #022D42;
+}
+
+.btn-a-savoir{
+  background: rgba(236, 255, 183, 1);
+  width: 162px;
+  height: 40px;
+  gap: 8px;
+  border-radius: 8px;
+  border: none;
+  margin-bottom: 32px;
+  font-size: 14px;
+  color: #022D42;
+}
+
+.a-savoir{
+  background: rgba(199, 199, 188, 1);
+  padding: 20px;
+  border-radius: 16px;
+  margin: 44px;
+}
+
+.a-savoir-dematerialisation{
+  background: rgba(199, 199, 188, 1);
+  padding: 20px;
+  border-radius: 16px;
+  color: #022D42;
+}
+
+.a-savoir-texte{
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  text-align: left;
+  color: #022D42;
+}
+
+.a-savoir{
+  width: 84%!important;
+}
+
+
+.img-vector{
+  width: 100%;
+  text-align: center;
+  margin-bottom: 30px;
+}
+
+.acces-formulaire{
+  background: rgba(154, 171, 179, 1);
+  padding: 20px;
+  border-radius: 16px;
+  margin: 44px;
+  margin-top: 0px;
+  display: flex; /* Active Flexbox */
+  flex-direction: column; /* Empile les éléments verticalement sur mobile */
+  align-items: flex-start; 
+}
+
+.acces-formulaire-texte{
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  color: #022D42;
+}
+
+/*.icon{
+  width: 28px;
+  height: 28px;
+  border-radius: 4px 0px 0px 0px;
+
+
+}*/
+
+
+
+/* Disposition horizontale sur desktop */
+@media (min-width: 768px) {
+
+  .header-intro-first{
+    width: 1328px;
+    height: 290px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .header-intro{
+    width: 1328px;
+    margin-bottom: 87px;
+  }
+
+  .text-intro{
+    font-size: 16px;
+  }
+  .card-container {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .mat-card {
+    width: 427px;
+    height: 454px;
+  }
+
+  .mat-card img {
+    width: 395px;
+  }
+
+  mat-card-content{
+    font-size: 16px;
+  }
+
+  .text-intro{
+    width: 652px;
+  }
+
+  .btn-acces-rapide {
+    height: 54px;
+    white-space: nowrap;
+    display: inline-flex;
+    align-items: center;
+    background-color: #ECFFB7;
+    color: #022D42;
+    gap: 8px;
+    border-radius: 8px;
+    border: none;
+    font-size: 16px;
+    font-weight:700 ;
+    padding: 7px 16px 12px 16px;
+    margin-right: 24px;
+  }
+
+  .acces-rapid{
+    font-size: 24px;
+    color: #022D42;
+    margin-bottom: 30px;
+    font-weight: 700;
+  }
+
+  .section-texte-desktop{
+    font-size: 16px;
+    line-height: 24px;
+    max-height: 68px;
+    margin-bottom: 2px;
+    text-align: justify;
+    color: #022D42;
+  }
+
+  .section-desk{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: flex-start;
     gap: 20px;
+    margin-top: 58px;
+  }
+
+  .section-titre {
+    flex: 1; 
+    text-align: left;
+    font-weight: 700;
+    line-height: 44px;
+    font-size: 40px;
+
+  }
+  
+  .text-container {
+    flex: 1;
+    text-align: left;
+  }
+
+  .a-savoir {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    width: 73%;
+  }
+  
+  .btn-a-savoir {
+    text-align: left;
+  }
+  
+  .a-savoir-titre {
+    padding-top: 6px;
+  }
+  
+  .a-savoir-texte {
+    display: flex;
+    padding-left: 13%;
+    margin-top: -3%;
+    gap: 20px;
+    size: 16px;
+  }
+
+  .a-savoir-texte-dematerialisation{
+    size: 16px;
+    line-height: 24px;
+    font-weight: 500;
+    color: #022D42;
+  }
+  
+  .colonne-paragraphe {
+    text-align: left;
+    line-height: 1.6;
+  }
+
+  .card-dematerialisation {
+    flex-direction: row;
+    width: 88%;
+    margin: 0px;
+  }
+
+  .mat-card-dematerialisation,
+  .a-savoir-dematerialisation {
+    width: 50%;
+  }
+  .a-savoir-dematerialisation {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  text-align: left;
+  color: #022D42;
+  }
+  
+  #image-dematerialisation{
+    width: 602px;
+    height: 183px;
+    border-radius: 18px;
+  }
+
+  .acces-formulaire {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 86%;
+    margin-top: 44px;
+  }
+
+  .acces-formulaire-texte{
+    font-size: 16px;
+  }
+
+  .section-arch-doc{
+    width: 125px!important;
+  }
+
+  .button-solutions {
+    align-self: flex-end;
+  }
+
+ 
+  
 }
