--- a/src/app/components/front-office/vision/vision.component.css
+++ b/src/app/components/front-office/vision/vision.component.css
@@ -1,4 +1,653 @@
 .main-content {
+  padding-top: 48px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+}
+
+.section-intro{
+  width: 327px;
+  padding-bottom: 28px;
+}
+
+.intro{
+  font-size: 45px;
+  font-weight: 700;
+  line-height: 52.8px;
+  text-align: left;
+  color: #022D42;
+  margin-bottom: 40px;
+}
+
+.button-acces {
+  height: 54px;
+  white-space: nowrap;
+  display: inline-flex;
+  align-items: center;
+  background-color: #ECFFB7;
+  color: #022D42 ;
+  gap: 8px;
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+  font-weight:700 ;
+  padding: 7px 16px 12px 16px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between; 
+}
+
+.button-acces:hover,
+.button-acces:active {
+  color: #022D42;
+  background-color: #ECFFB7;
+}
+
+.text-intro{
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 26.4px;
+  text-align: left;
+  color: #022D42;
+  margin-bottom: 20px;
+  margin-top: 48px;
+}
+
+.p1-intro, .p2-intro{
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  text-align: left;
+  color: #022D42;
+}
+
+.etiquette-titre{
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 30.8px;
+  color: #022D42;
+}
+
+.etiquette{
+  width: 327px;
+  /*padding: 0px 24px 0px 24px;*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #022D42;
+}
+
+.etiquette-p{
+  text-align: center;
+  font-size: 25px;
+  line-height: 30.8px;
+  font-weight: 700;
+  color: #022D42;
+  display: flex;
+}
+
+.etiquette img, .etiquette-d3e img{
+  padding-bottom: 10px;
+  padding-top: 38px;
+}
+
+.etiquette mat-card-title, .etiquette-d3e mat-card-title, .etiquette-d3e-spec mat-card-title{
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 27px;
+  text-align: left;
+  color: #022D42;
+}
+
+.etiquette mat-card , .etiquette-d3e-spec mat-card{
+  padding: 24px 0px 0px 0px;
+  gap: 16px;
+  border-radius: 16px;
+  background: rgba(199, 199, 188, 1);
+  display: flex;
+  margin-top: 16px;
+  border: none;
+  color: #022D42;
+  font-size: 14px;
+  width: 327px;
+  height: 209px;
+}
+
+
+.etiquette-icon{
+  margin-right: 8px;
+  margin-top: -56px;
+}
+
+/*mat-card-title{
+  height: 26px;
+}
+
+.etiquette-d3e mat-card {
+  width: 350px;
+  padding: 24px 0px 0px 0px;
+  gap: 16px;
+  border-radius: 16px;
+  background: rgba(199, 199, 188, 1);
+  display: flex;
+  margin-top: 16px;
+  border: none;
+  color: #022D42;
+  font-size: 14px;
+}*/
+
+.img-vector{
+  width: 100%;
+  text-align: center;
+  padding-top: 48px;
+  padding-bottom: 48px;
+}
+
+.dematerialisation {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
     padding: 20px;
-    min-height: 80vh; /* Ajuste la hauteur pour occuper la majeure partie de la page */
+}
+
+.dematerialisation img {
+    max-width: 100%;
+    height: auto;
+}
+
+/*.texte-container {
+    max-width: 600px;
+}*/
+
+
+.acces-formulaire{
+  background: rgba(154, 171, 179, 1);
+  padding: 20px;
+  border-radius: 16px;
+  margin: 44px;
+  margin-top: 0px;
+  display: flex; /* Active Flexbox */
+  flex-direction: column; /* Empile les éléments verticalement sur mobile */
+  align-items: flex-start; 
+}
+
+.acces-formulaire-texte{
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  color: #022D42;
+}
+
+.button-acces:hover,
+.button-acces:active {
+  color: #022D42;
+  background-color: #ECFFB7;
+}
+
+.button-acces {
+  height: 54px;
+  white-space: nowrap;
+  display: inline-flex;
+  align-items: center;
+  background-color: #ECFFB7;
+  color: #022D42 ;
+  gap: 8px;
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+  font-weight:700 ;
+  padding: 7px 16px 12px 16px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between; 
+}
+
+.recycl-valor{
+  width: 326px;
+}
+
+.titre-recyc-valor, .titre-destruction-d3e{
+  color: #022D42;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 30.8px;
+}
+
+.texte-recyc-valor{
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+  color: #022D42;
+}
+
+.p-recyc-valor{
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 26.4px;
+  color: #022D42;
+}
+
+.vision-img img{
+  margin-top: 32px;
+  margin-bottom: 32px;
+}
+
+.button-solutions {
+  height: 54px;
+  white-space: nowrap;
+  display: inline-flex;
+  align-items: center;
+  background-color: #022D42;
+  color: #FBFBF7;
+  gap: 8px;
+  border-radius: 8px;
+  border: none;
+  font-size: 16px;
+  font-weight:700 ;
+  padding: 7px 16px 12px 16px;
+  margin-top: 32px;
+}
+
+.button-solutions:hover,
+.button-solutions:active {
+  color: #022D42;
+  background-color: #ECFFB7;
+}
+
+.prq-detruire, .dematerialisation{
+  width: 327px;
+}
+
+.titre-prq-detruire, .titre-prq-demat{
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 30.8px;
+  color: #022D42;
+}
+
+.sous-titre{
+  color: #022D42;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 26px;
+  padding-top: 32px;
+  padding-bottom: 16px;
+}
+
+.p-prq-detruire{
+  color: #022D42;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+}
+
+.p-prq-demat{
+  color: #022D42;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 21px;
+}
+
+.titre-prq-demat{
+  margin-top: 40px;
+  margin-bottom: 32px;
+}
+
+.dematerialisation{
+  color: #022D42;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 30.8px;
+  margin-bottom: 48px;
+}
+
+.a-savoir-titre{
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 26.4px;
+  color: #022D42;
+}
+
+.destruction-d3e-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 20px;
+  padding: 20px;
+}
+
+.destruction-d3e-content {
+  max-width: 600px;
+}
+
+.destruction-d3e-image img {
+  max-width: 100%;
+  height: auto;
+}
+
+.destruction-d3e{
+  order: 1;
+}
+
+.container-d3e{
+  order: 2;
+}
+
+/* Disposition horizontale sur desktop */
+@media (min-width: 768px) {
+
+  .main-content{
+    padding-top: 80px;
   }
+
+  .intro{
+    margin-bottom: 48px;
+  }
+
+  .section-intro{
+    width: 1328px;
+    margin-bottom: 87px;
+  }
+
+  .header-intro-first{
+    width: 1328px;
+    height: 290px;
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
+  .acces-rapid{
+    font-size: 24px;
+    color: #022D42;
+    margin-bottom: 30px;
+    font-weight: 700;
+  }
+
+  .btn-acces-rapide{
+    height: 54px;
+    white-space: nowrap;
+    display: inline-flex;
+    align-items: center;
+    background-color: #ECFFB7;
+    color: #022D42;
+    gap: 8px;
+    border-radius: 8px;
+    border: none;
+    font-size: 16px;
+    font-weight:700 ;
+    padding: 7px 16px 12px 16px;
+    margin-right: 24px;
+    margin-top: 24px
+  }
+
+  .etiquette mat-card {
+    width: 320px;
+    height: 263px;
+    padding: 32px 0px 0px 0px;
+  }
+
+  .text-intro{
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 30.8px;
+    width: 80%;
+  }
+
+  .intro-container{
+    display: flex;
+    gap: 24px;
+  }
+
+  .p1-intro, .p2-intro {
+    width: 50%;
+    display: inline-block;
+    vertical-align: top;
+    font-size: 16px;
+  }
+
+  .etiquette-titre{
+    font-size: 40px;
+    line-height: 44px;
+    display: flex;
+    align-items: center;
+  }
+
+ .etiquette {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  font-size: 16px;
+}
+
+.etiquette-container, .etiquette-container-spec{
+  display: flex;
+  justify-content: center;
+  align-items: stretch;
+  gap: 16px;
+}
+
+.etiquette-d3e-spec mat-card{
+  width: 432px;
+  height: 215px;
+}
+  .img-vector {
+    width: 83%;
+  }
+
+  .recycl-valor-desk{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    gap: 20px;
+    margin-top: 58px;
+  }
+
+  .recycl-valor{
+    width: 83%;
+  }
+
+  .titre-recyc-valor {
+    flex: 1; 
+    text-align: left;
+    font-weight: 700;
+    line-height: 52.8px;
+    font-size: 48px;
+  }
+  
+  .texte-recyc-valor {
+    flex: 1;
+    text-align: left;
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .p-recyc-valor{
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 30.8px;
+    width: 877px;
+    height: 93px;
+    margin-top: 48px;
+    margin-bottom: 48px;
+  }
+
+  .p-prq-demat{
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .titre-prq-demat{
+    font-size: 48px;
+    line-height: 52.8px;
+  }
+
+  .prq-detruire-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 40px;
+    max-width: 1200px;
+    width: 100%;
+  }
+
+  .prq-detruire-1, .prq-detruire-2 {
+    flex: 1;
+    text-align: left;
+    max-width: 600px;
+  }
+
+  .titre-prq-detruire {
+    font-size: 48px;
+    Line-height: 52.8px;
+  }
+
+  .prq-detruire button {
+    margin-top: 20px;
+  }
+
+  .prq-detruire, .dematerialisation{
+    width: 83%;
+    font-size: 16px;
+    line-height: 24px;
+    gap: 80px;
+  }
+
+
+  .sous-titre{
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 26.4px;
+  }
+
+  .destruction-d3e-container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    text-align: left;
+    max-width: 1200px;
+    margin: 0 auto;
+    gap: 40px;
+  }
+
+  .destruction-d3e-content {
+    flex: 1;
+  }
+
+  .destruction-d3e-image {
+    flex: 1;
+    display: flex;
+  }
+
+  .image-d3e {
+    max-width: 500px;
+    height: auto;
+  }
+
+  .titre-destruction-d3e{
+    font-weight: 700;
+    line-height: 52.8px;
+    font-size: 48px;
+  }
+
+  .p-prq-detruire{
+    font-size: 16px;
+    line-height: 24px;
+  }
+
+  .destruction-d3e-container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    text-align: left;
+    max-width: 1200px;
+    margin: 0 auto;
+    gap: 40px;
+  }
+
+  .destruction-d3e-content {
+    flex: 1;
+  }
+
+  .destruction-d3e-image {
+    flex: 1;
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .image-d3e {
+    max-width: 500px;
+    height: auto;
+  }
+
+  .etiquette {
+    width: 1328px;
+  }
+
+
+  .vision-img img{
+    width: 1328px;
+  }
+
+  .dematerialisation {
+    flex-direction: row;
+    align-items: center;
+    /*justify-content: center;
+    text-align: left;*/
+  }
+
+  .dematerialisation > div {
+    flex: 1;
+  }
+
+  .texte-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+  }
+
+  .destruction-d3e{
+    order: 2;
+  }
+
+  .container-d3e{
+    order: 1;
+  }
+
+  .acces-formulaire {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 86%;
+    margin-top: 44px;
+  }
+
+  .a-savoir {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    width: 73%;
+  }
+  
+  .btn-a-savoir {
+    text-align: left;
+  }
+  
+  .a-savoir-titre {
+    padding-top: 6px;
+  }
+  
+  .a-savoir-texte {
+    display: flex;
+    padding-left: 13%;
+    margin-top: -3%;
+    gap: 20px;
+    size: 16px;
+  }
+
+  .acces-formulaire-texte{
+    font-size: 16px;
+  }
+}
