--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,20 @@
 html, body { height: 100%; }
 body{  background-color: #DBDDD5;
         margin: 0;
-    }
-
+}
+    
+    /*body::before {
+        content: "";
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(rgba(255, 0, 0, 0.2) 1px, transparent 1px),
+                          linear-gradient(90deg, rgba(255, 0, 0, 0.2) 1px, transparent 1px);
+        background-size: 20px 20px; /* Taille de la grille */
+        /*pointer-events: none;
+        z-index: 9999;
+      }*/
+      
       
